tests/errors/no_return.asm
Function 0 must terminate with RET.
